Fix: Tooltip in bottom position renders misaligned

--- a/src/fontra/client/css/tooltip.css
+++ b/src/fontra/client/css/tooltip.css
@@ -122,9 +122,7 @@
   border-left: var(--tooltip-arrow-size) solid transparent;
   border-bottom: var(--tooltip-arrow-size) solid var(--tooltip-background-color);
   border-top: 0;
-  left: 100%;
   top: 100%;
-  margin-left: calc(var(--tooltip-arrow-size) * -2);
 }
 
 [data-tooltipposition="bottom-left"]:hover::before {
